--- a/src/pages/vi/blog/category/[category].astro
+++ b/src/pages/vi/blog/category/[category].astro
@@ -14,10 +14,10 @@ export async function getStaticPaths() {
 		return !data.draft && data.publishDate < new Date();
 	});
 	
-	// Filter for Turkish posts (posts starting with "tr/")
+	// Filter for Turkish posts (posts starting with "vi/")
 	const localizedPosts = posts.filter((page) => {
 		const [lang, ...slug] = page.slug.split("/");
-		return lang === "tr";
+		return lang === "vi";
 	});
 	
 	const categories = new Set();
@@ -35,7 +35,7 @@ export async function getStaticPaths() {
 					post.data.category.toLowerCase() === category
 				),
 				category: category,
-				lang: "tr",
+				lang: "vi",
 			},
 		};
 	});
@@ -49,7 +49,7 @@ const currentLang = getLangFromUrl(Astro.url);
 const t = useTranslations(currentLang);
 ---
 
-<Layout title="Blog" dir={lang === 'tr' ? 'ltr' : 'ltr'}>
+<Layout title="Blog" dir={lang === 'vi' ? 'ltr' : 'ltr'}>
 	<Container>
 		<Sectionhead>
 			<Fragment slot="title">#{category}</Fragment>
