--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,6 +49,7 @@ const ogImageUrl = new URL(image, siteUrl);
     <meta property="og:image" content={ogImageUrl} />
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="icon" type="image/ico" href="/favicon.ico" />
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="VdJI8K+9fFQ9pLM517exGw" async></script>
   </head>
   <body class="antialiased">
     <Navbar variant={variant} lang={lang} />
