--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -22,7 +22,7 @@ function localizePath(path: string) {
 }
 
 const title = "About Us - MusicalDown";
-const description = "Learn about MusicalDown, your ultimate destination for downloading TikTok videos without watermarks. Our mission to simplify creativity with free video downloads.";
+const description = "Learn about MusicalDown, your ultimate destination to download TikTok videos without watermark. Our mission to simplify creativity with free video downloads.";
 ---
 
 <Layout title={title} description={description}>
