--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -22,7 +22,7 @@ function localizePath(path: string) {
 }
 
 const title = "Contact Us - MusicalDown";
-const description = "Get in touch with MusicalDown team. Any questions regarding downloading TikTok videos? Need support or have feedback? Contact us and we'll be glad to assist you.";
+const description = "Get in touch with MusicalDown team. Any questions regarding downloading TikTok videos?. Contact us for support and feedback. We'll be glad to assist you.";
 ---
 
 <Layout title={title} description={description}>
@@ -138,9 +138,9 @@ const description = "Get in touch with MusicalDown team. Any questions regarding
       <!-- Contact Information -->
       <div class="order-1 w-full px-4 lg:order-2 lg:w-1/2 xl:w-6/12">
         <div class="mb-12 px-5 pt-3 sm:max-w-[570px] lg:mb-0">
-          <span class="mb-4 block text-base font-semibold text-indigo-500">
+          <h1 class="mb-4 block text-base font-semibold text-indigo-500">
             Contacts
-          </span>
+          </h1>
           <h2
             class="mb-6 text-[32px] font-bold uppercase sm:text-[40px] lg:text-[36px] xl:text-[40px]"
           >
