--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -22,7 +22,7 @@ function localizePath(path: string) {
 }
 
 const title = "Privacy Policy - MusicalDown";
-const description = "Read MusicalDown's Privacy Policy to understand how we collect, use, and protect your personal data. Learn about our commitment to your privacy and data security.";
+const description = "Read MusicalDown TikTok Video Downloader Privacy Policy to understand how we are commited to protect your personal data privacy and data security.";
 ---
 
 <Layout title={title} description={description}>
