--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -59,13 +59,13 @@ function localizePath(path: string) {
 			"@type": "WebSite",
 			"name": "MusicalDown",
 			"alternateName": "MusicalDown TikTok Downloader | Download Video TikTok Without Watermark Online",
-			"url": "https://musicallyio.com",
+			"url": "https://musicaldown.online",
 			"description": "MusicalDown is a powerful TikTok downloader that lets you save TikTok videos without watermark in HD quality. MusicallyDown - Download TikTok videos in MP4",
 			"potentialAction": {
 				"@type": "SearchAction",
 				"target": {
 					"@type": "EntryPoint",
-					"urlTemplate": "https://musicallyio.com/?url={search_term_string}"
+					"urlTemplate": "https://musicaldown.online/?url={search_term_string}"
 				},
 				"query-input": "required name=search_term_string"
 			},
@@ -79,18 +79,18 @@ function localizePath(path: string) {
 			"@context": "https://schema.org",
 			"@type": "Organization",
 			"name": "MusicalDown",
-			"url": "https://musicallyio.com",
-			"logo": "https://musicallyio.com/apple-touch-icon.webp",
-			"image": "https://musicallyio.com/meta/opengraph.webp",
+			"url": "https://musicaldown.online",
+			"logo": "https://musicaldown.online/apple-touch-icon.webp",
+			"image": "https://musicaldown.online/meta/opengraph.webp",
 			"description": "MusicalDown is a powerful TikTok downloader that lets you save TikTok videos without watermark in HD quality. MusicallyDown - Download TikTok videos in MP4",
-			"email": "contact@musicallyio.com",
+			"email": "contact@musicaldown.online",
 			"sameAs": [
 				"https://x.com/TikTokio_cam"
 			],
 			"contactPoint": {
 				"@type": "ContactPoint",
 				"contactType": "Customer Support",
-				"email": "contact@musicallyio.com"
+				"email": "contact@musicaldown.online"
 			}
 		}
 		</script>
@@ -102,8 +102,8 @@ function localizePath(path: string) {
 			"@type": "WebApplication",
 			"name": "MusicalDown",
 			"alternateName": "Musicaldown - TikTok Video Downloader",
-			"url": "https://musicallyio.com",
-			"image": "https://musicallyio.com/images/logo.svg",
+			"url": "https://musicaldown.online",
+			"image": "https://musicaldown.online/images/logo.svg",
 			"applicationCategory": "MultimediaApplication",
 			"applicationSubCategory": "Video Downloader",
 			"operatingSystem": "Web Browser, Windows, Linux, iOS, Android, macOS",
