--- a/src/pages/id/contact.astro
+++ b/src/pages/id/contact.astro
@@ -83,7 +83,7 @@ const description = "Get in touch with MusicalDown team. Any questions regarding
                                 <h3 class="mb-2 text-lg font-medium leading-6 text-gray-900 dark:text-white">Contact
                                 </h3>
                                 <p class="text-gray-600 dark:text-slate-400">Mobile:+1 323-238-7315</p>
-                                <p class="text-gray-600 dark:text-slate-400">Mail: contact@musicallyio.com</p>
+                                <p class="text-gray-600 dark:text-slate-400">Mail: contact@musicaldown.online</p>
                             </div>
                         </li>
                         <li class="flex">
