--- a/src/pages/id/privacy-policy.astro
+++ b/src/pages/id/privacy-policy.astro
@@ -114,7 +114,7 @@ const description = "Read MusicalDown's Privacy Policy to understand how we coll
                         </li>
                         <li class="flex items-center">
                             <svg class="w-3.5 h-3.5 me-2 text-green-500 dark:text-green-400 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20"><path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/></svg>
-                            Website refers to MusicalDown, accessible from <a href="https://musicallyio.com" rel="external nofollow noopener" target="_blank">https://musicallyio.com</a>
+                            Website refers to MusicalDown, accessible from <a href="https://musicaldown.online" rel="external nofollow noopener" target="_blank">https://musicaldown.online</a>
                         </li>
                         <li class="flex items-center">
                             <svg class="w-3.5 h-3.5 me-2 text-green-500 dark:text-green-400 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20"><path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/></svg>
@@ -238,11 +238,11 @@ const description = "Read MusicalDown's Privacy Policy to understand how we coll
                         <ul class="max-w-6xl space-y-1 text-base leading-8 my-5">
                         <li class="flex items-center">
                             <svg class="w-3.5 h-3.5 me-2 text-green-500 dark:text-green-400 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20"><path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/></svg>
-                            By email: help@musicallyio.com
+                            By email: help@musicaldown.online
                         </li>
                         <li class="flex items-center">
                             <svg class="w-3.5 h-3.5 me-2 text-green-500 dark:text-green-400 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20"><path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/></svg>
-                            By visiting this page on our website: <a href="https://musicallyio.com/contact" rel="external nofollow noopener" target="_blank">https://musicallyio.com/contact</a>
+                            By visiting this page on our website: <a href="https://musicaldown.online/contact" rel="external nofollow noopener" target="_blank">https://musicaldown.online/contact</a>
                             </li>
                         </ul>
                 </p>
