--- a/src/pages/vi/terms-of-service.astro
+++ b/src/pages/vi/terms-of-service.astro
@@ -47,7 +47,7 @@ const description = "Discover the essential Terms and Conditions for MusicalDown
                 </div>
                 <hr>
                 <p class="text-base leading-8 my-5">
-                    Welcome to the Terms and Conditions of MusicalDown (musicallyio.com), a user-friendly online tool designed for seamless 
+                    Welcome to the Terms and Conditions of MusicalDown (musicaldown.online), a user-friendly online tool designed for seamless 
 					downloading of TikTok content including videos in high-quality MP4 format, audio as MP3, thumbnails, photos and even 
 					bulk profile downloads—all without requiring login or app installation. 
 					By accessing or using our service, you agree to these terms, which outline the rules for responsible usage and protect both users and the platform.
@@ -96,7 +96,7 @@ const description = "Discover the essential Terms and Conditions for MusicalDown
                         </li>
                         <li class="flex items-center">
                             <svg class="w-3.5 h-3.5 me-2 text-green-500 dark:text-green-400 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20"><path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/></svg>
-                            <strong>Website </strong>refers to MusicalDown, accessible from https://musicallyio.com/
+                            <strong>Website </strong>refers to MusicalDown, accessible from https://musicaldown.online/
                         </li>
                         <li class="flex items-center">
                             <svg class="w-3.5 h-3.5 me-2 text-green-500 dark:text-green-400 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20"><path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/></svg>
@@ -226,7 +226,7 @@ const description = "Discover the essential Terms and Conditions for MusicalDown
 				<p class="text-base leading-8 my-5">
                     If you have any questions about these Terms and Conditions, You can contact us:
 					<br/>
-					By visiting this page on our website: https://musicallyio.com/contact/		
+					By visiting this page on our website: https://musicaldown.online/contact/		
                 </p>
 				
             </div>
