--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -95,6 +95,25 @@ function localizePath(path: string) {
 		}
 		</script>
 		
+<script type="application/ld+json">
+		{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "MusicalDown",
+  "operatingSystem": "WINDOWS, macOS, Android, iOS",
+  "applicationCategory": "MultimediaApplication",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.8",
+    "ratingCount": "1250"
+  },
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  }
+}
+</script>
 		<!-- 3. WebApplication Schema -->
 		<script type="application/ld+json">
 		{
