--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -200,15 +200,15 @@ function localizePath(path: string) {
 }
 </script>
 		
-		<!-- Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-C33KK2QQG5"></script>
-		<script is:inline>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-			gtag('config', 'G-C33KK2QQG5');
-		</script>
-		
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V9XMHYXMK7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V9XMHYXMK7');
+</script>
 		<!-- Social Media Links -->
 		<div class="m-auto mt-4 flex w-max items-center justify-between space-x-4 text-gray-500 dark:text-white">
 			<a class="duration-300 hover:text-gray-900 dark:hover:text-gray-100" 
